<resources>
    <string name="google_maps_key">AIzaSyC5N-nm-ZOStc6WTthQWffItctlzNGcS9k</string>
    <string name="app_name" translatable="false">Customer</string>
    <string name="permission_pick_rationale">READ_EXTERNAL_STORAGE permission is needed to pick image.</string>
    <string name="permission_crop_rationale">WRITE_EXTERNAL_STORAGE permission is needed to save cropped image.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_wait">Please wait...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="hindi">Hindi</string>
    <string name="intro_1">Search your nearby \n Make-up Artist \n and Hair Stylish.</string>
    <string name="intro_2">Make yourself more beatiful more than you think.</string>
    <string name="intro_3">Hire the best Phtographer &amp; create your moment.</string>
    <string name="internet_concation">Please enable your internet connection.</string>
    <string name="server_error">Unable to connect server.</string>
    <string name="closeMsg">Are your sure you want to close FabArtist?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="jobs_completed">Jobs Done</string>
    <string name="completion">Completion</string>
    <string name="hr_add_on">/hr Add On :</string>
    <string name="fixed_rate_add_on">fixed rate Add On :</string>
    <string name="reviews">REVIEW(</string>
    <string name="book_artist">Book Artist</string>
    <string name="book_msg">Are you sure to book</string>
    <string name="chats">Chats</string>
    <string name="val_comment">Please enter comment</string>
    <string name="take_image">FabCustomer : Take Image From</string>
    <string name="select_picture">Select Picture</string>
    <string name="val_des">Please enter description.</string>
    <string name="val_address">Please select address.</string>
    <string name="val_title">Please enter title.</string>
    <string name="select_category">Select Category</string>
    <string name="val_email">Please enter email id.</string>
    <string name="location_enabled">Couldn\'t get the location. Make sure location is enabled on the device</string>
    <string name="artist_here">Artist here</string>
    <string name="my_bookings">My Bookings</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="cash_msg">Are you sure want to do cash payment?</string>
    <string name="val_category">Please select category.</string>
    <string name="val_price">Please enter price.</string>
    <string name="val_pass">Password must contain at least six characters.</string>
    <string name="val_pass1">Renter password contain at least six characters.</string>
    <string name="val_name">Please enter name.</string>
    <string name="pass_not_match">Password dose not match.</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="completed">Completed</string>
    <string name="decline">Decline</string>
    <string name="decline_msg">Are you sure you want to decline this appointment?</string>
    <string name="waiting_artist">Waiting for artist response</string>
    <string name="request_acc">Request accepted by artist</string>
    <string name="work_inpro">Your work in progress</string>
    <string name="booking_with">Booking With</string>
    <string name="booking_cancel_msg">Are you sure to cancel booking with</string>
    <string name="date">Date:</string>
    <string name="applied">Applied</string>
    <string name="confirm">Confirm</string>
    <string name="complete">Complete</string>
    <string name="inprogress">Inprogress</string>
    <string name="reject">Reject</string>
    <string name="reject_msg">Are you sure you want to reject the application?</string>
    <string name="confirm_msg">Are you sure you want to confirm the application?</string>
    <string name="complete_msg">Are you sure you want to complete the application?</string>
    <string name="km">KM From You</string>
    <string name="job_id">Job Id:</string>
    <string name="open">Open</string>
    <string name="not_edit_job">You can\'t edit this job because Artist have already applied</string>
    <string name="delete">Delete</string>
    <string name="delete_job">Are you sure to delete this job?</string>
    <string name="complete_job">Are you sure to complete this job?</string>
    <string name="service">Service #</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="duration">DURATION:</string>
    <string name="solve">Solve</string>
    <string name="close">Close</string>
    <string name="future_bookings">Future Bookings</string>
    <string name="all_category">ALL CATEGORIES</string>
    <string name="get_discount">Get Offer</string>
    <string name="code_copy">Code Copy</string>
    <string name="my_code">Hello, this is my Referral Code</string>
    <string name="opps_share">Opps!! It seems that you have not installed any sharing app.</string>
    <string name="invoice">Invoice</string>
    <string name="ic_wallet">Wallet</string>
    <string name="fabartist">Artist</string>
    <string name="jobs">Post Jobs</string>
    <string name="notification">Notifications</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="support">Support</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="applied_job">Applied Job</string>
    <string name="search_by_artist">Search By Artist</string>
    <string name="no_application_found">NO APPLICATION FOUND</string>
    <string name="book_now">BOOK NOW</string>
    <string name="quick_chat">QUICK CHAT</string>
    <string name="future_book">FUTURE BOOK</string>
    <string name="image_gallery">IMAGE GALLERY</string>
    <string name="video_gallery">VIDEO GALLERY</string>
    <string name="no_video_available">No Video Available</string>
    <string name="about">ABOUT</string>
    <string name="qualification">QUALIFICATION</string>
    <string name="skills">SKILLS</string>
    <string name="products">PRODUCTS</string>
    <string name="privious_work">PREVIOUS WORK</string>
    <string name="no_chat_history_found">NO CHAT HISTORY FOUND</string>
    <string name="comment">Comment</string>
    <string name="write_your_message">Write your message</string>
    <string name="update_job">Update Job</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="enter_your_description">Enter Your Description</string>
    <string name="update_picture">Update Picture</string>
    <string name="update">Update</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_id">Email Id</string>
    <string name="submit">Submit</string>
    <string name="apply_code">APPLY CODE</string>
    <string name="copy">COPY</string>
    <string name="invite_friend">Invite Friend</string>
    <string name="map">Map</string>
    <string name="no_booking_found">NO BOOKING FOUND</string>
    <string name="no_notification_found">NO NOTIFICATION FOUND</string>
    <string name="payment">Payment</string>
    <string name="work_completed">WORK COMPLETED</string>
    <string name="apply_coupon_code">Apply Coupon Code</string>
    <string name="write_code_here">Write Code Here</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="online_payment">ONLINE PAYMENT</string>
    <string name="or">OR</string>
    <string name="cash_payment1">CASH PAYMENT</string>
    <string name="post_job">Post Job</string>
    <string name="price">Price</string>
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="profile_picture">PROFILE PICTURE</string>
    <string name="change">Change</string>
    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="full_name">FULL NAME</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="gender">GENDER</string>
    <string name="password_change">PASSWORD CHANGE</string>
    <string name="set_address">SET ADDRESS</string>
    <string name="enter_your_address">ENTER YOUR ADDRESS</string>
    <string name="city">CITY</string>
    <string name="country">COUNTRY</string>
    <string name="set_location">SET LOCATION</string>
    <string name="signout">SignOut</string>
    <string name="promotion">Promotion</string>
    <string name="apply_code1">Apply Code</string>
    <string name="email_address1">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="didn_t_have_any_account">Didn\'t have any account?</string>
    <string name="first_name">First name</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="do_you_have_an_account_already">Do you have an account already?</string>
    <string name="write_review">Write Review</string>
    <string name="your_review">Your Review*</string>
    <string name="services_type">Services type:</string>
    <string name="accept">ACCEPT</string>
    <string name="reject1">REJECT</string>
    <string name="artist_will_soon">Artist will soon</string>
    <string name="complete1">COMPLETE</string>
    <string name="edit">EDIT</string>
    <string name="decline1">DECLINE</string>
    <string name="cancel_booking">CANCEL BOOKING</string>
    <string name="working_time">Working Time</string>
    <string name="finish_job">FINISH JOB</string>
    <string name="delete1">DELETE</string>
    <string name="pay_now">PAY NOW</string>
    <string name="review_by">REVIEW BY</string>
    <string name="jobs_done">Jobs Done</string>
    <string name="completion1">Completion</string>
    <string name="get_your_best_service_from_us">Get your best service from us</string>
    <string name="add_title">Add Title</string>
    <string name="enter_title">Enter Title *</string>
    <string name="cancel1">CANCEL</string>
    <string name="add">ADD</string>
    <string name="save">SAVE</string>
    <string name="old_password">OLD PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="payment_option">Payment Option</string>
    <string name="select">Select</string>
    <string name="no_appointment_found">NO APPOINTMENT FOUND</string>
    <string name="no_artist_found">No Artist Found</string>
    <string name="nearby">NEARBY</string>
    <string name="discover">DISCOVER</string>
    <string name="search_by_job">Search By Job Title</string>
    <string name="no_jobs_found">NO JOBS FOUND</string>
    <string name="fit_image">FIT IMAGE</string>
    <string name="square">SQUARE</string>
    <string name="free">FREE</string>
    <string name="circle">CIRCLE</string>
    <string name="circle_square">CIRCLE_SQUARE</string>
    <string name="search_by_invoice">Search By InvoiceId</string>
    <string name="no_history_found">NO HISTORY FOUND</string>
    <string name="no_ticket_found">NO TICKET FOUND</string>
    <string name="job_done_for">JOB DONE FOR</string>
    <string name="wallet_balance">WALLET BALANCE</string>
    <string name="all">All</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
</resources>